--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fastapi
-uvicorn
 python-multipart
 PyPDF2
-langchain
 openai
-faiss-cpu
 pinecone-client
-python-dotenv
 langchain-community
+fastapi==0.100.0
+uvicorn[standard]==0.23.2
+langchain==0.0.320
+faiss-cpu==1.7.4
+python-dotenv==1.0.0
+openai==0.27.10
